[package]
name = "fatass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
indicatif = "0.17.7"
tabled = "0.15.0"
walkdir = "2.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3       # Optimize for performance
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[package.metadata.cross.target.x86_64-unknown-linux-musl]
opt-level = 3       # Optimize for performance
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
